<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/dialog_bg_test"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:singleLine="true"
        android:id="@+id/input_dialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/untested_title"
        android:textColor="@color/light_black"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_devider_gray" />

    <TextView
        android:id="@+id/go_to_check"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/go_to_check"
        android:textColor="@color/light_blue"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_devider_gray" />

    <TextView
        android:id="@+id/get_on_car"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/get_on_car"
        android:textColor="@color/light_blue"
        android:textSize="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_devider_gray" />

    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/light_blue"
        android:textSize="15dp" />

</LinearLayout>