<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/layout_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/text_black"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/registe_input_phone"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@null"
                android:hint="@string/phone_hint"
                android:singleLine="true"
                android:inputType="phone"
                android:digits="1234567890"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_onion"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_grey" />
        </LinearLayout>

        <Button
            android:id="@+id/get_code"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:background="@drawable/selector_login_submit"
            android:enabled="false"
            android:gravity="center"
            android:lineSpacingExtra="0dp"
            android:padding="0dp"
            android:text="@string/get_msg_check"
            android:textColor="@android:color/white"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="63dp"
        android:layout_marginTop="38dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/text_black"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/registe_input_code"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@null"
            android:hint="@string/code_hint"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_onion"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_grey" />
    </LinearLayout>

</LinearLayout>