<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/layout_titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="7dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="22dp"
                android:text="@string/idcard_number"
                android:textColor="@color/text_black"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/rm_input_id_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="@string/idcard_number_hint"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_onion"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/id_num_img"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:padding="5dp"
                    android:src="@drawable/pencile" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="22dp"
                android:text="@string/coach_card_serial"
                android:textColor="@color/text_black"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/rm_input_coach_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="@string/coach_card_serial_hint"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_onion"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/coach_num_img"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:padding="5dp"
                    android:src="@drawable/pencile" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="22dp"
                android:text="@string/car_type"
                android:textColor="@color/text_black"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/rm_input_car_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="@string/car_type_hint"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_onion"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/car_type_img"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:padding="5dp"
                    android:src="@drawable/pencile" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="22dp"
                android:text="@string/coach_card_make_time"
                android:textColor="@color/text_black"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/rm_input_make_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="@string/coach_card_make_time_hint"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_onion"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/card_make_time_img"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:padding="5dp"
                    android:src="@drawable/pencile" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="22dp"
                android:text="@string/idcard_photo"
                android:textColor="@color/text_black"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_marginTop="17dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:background="@drawable/idcard_photo_bg"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/idcard_photo_face"
                        android:textColor="@color/text_onion"
                        android:textSize="13dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/idcard_photo_bg"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="@string/idcard_photo_back"
                        android:textColor="@color/text_onion"
                        android:textSize="13dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>