<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <include layout="@layout/layout_titlebar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@android:color/white"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/login_input_account"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/account_hint"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="#adadad"
                android:textSize="18dp" 
                android:maxLength="11"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="验证码"
                android:textColor="@android:color/white"
                android:textSize="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/login_input_pwd"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword|phone"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#adadad"
                    android:textSize="18dp" />

                <!--
                     <ImageView
                    android:id="@+id/login_show_pwd"
                    android:layout_width="21dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:src="@drawable/show_pwd"
                    android:visibility="gone" />
                -->

                <Button
                    android:id="@+id/login_get_code"
                    android:layout_width="48dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/shape_yellow_round"
                    android:gravity="center"
                    android:text="获取\n验证码"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="11dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/forget_pwd"
                android:textColor="#f7941d"
                android:textSize="13dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/login_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/selector_login_submit"
                android:enabled="false"
                android:text="@string/login_submit"
                android:textColor="@android:color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>